        Added a basic stylesheet, installed into the static_path directory.
        Fixed the JSON output for action=index (using a new dependency on
          Template::Plugin::JSON::Escape).
        Added JSON output for the preferences page (#293).
        IP addresses no longer show on recent changes for people without the
          admin preference set.

0.66    12 April 2012
        All templates now have access to the "username" TT variable.
        Node name parameters in URLs are now accepted with spaces instead of
          underscores, to take account of people typing manually - these will
          redirect (303) to the proper URLs with underscores (#114).
        Add CSS classes for each category and locale to the "content" div
          (and hence we now require version 2.24 of Template).
        Switch to using Geo::Coordinates::OSGB/ITM instead of
          Geography::NationalGrid (which no longer exists on CPAN).
        Make sure that whitespace is collapsed in autocreated categories
          and locales, to avoid creating undeletable pages.
        Add an autocreate_content.tt template to include a map link in content
          for autocreated categories and locales (#275).
        Make sure the show_missing_metadata action skips redirects.

0.65    28 February 2010
        Fix some more broken POD and add POD unit test (#268)
        Don't display revision info for nodes that don't exist (#193)
        Return HTTP 404 status when displaying a node that doesn't exist (#102)
        Add Recent Changes tests (refers to #270)
        Some test cleanups (#271)
        Add read_only config option to turn off edits on a guide
          completely (#276)

0.64    23 February 2009
        Correctly specify all build_requires (#245)
        Fix some broken POD (#246)
        Metadata discovery features (action=metadata)
        JSON support for node details and metadata discovery
        Correctly validate web site URLs during edit and display,